ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-site-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "traefik"
  namespace: apps 
spec:
  rules:
  - host: nkdem.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-site-service
            port:
              number: 80
  tls:
  - hosts:
    - nkdem.net
    secretName: personal-site-tls-secret
